<resources>
    <string name="app_name">CS441_Proj2</string>
    <string name="helloToProject2">Welcome to Project 2!</string>
    <string name = "changeScreen">Submit Information</string>
    <string name = "OMG2Screen">OMG it\&apos;s the second screen!</string>
    <string name="backToFirst">Back to First Screen</string>
    <string name="inputBox">What is your name?</string>
    <string name="space"> </string>
    <string name="radioCap">What is your favorite Sports League?</string>
    <string name="clearRadio">Clear Selection</string>
    <string name="nhl">NHL</string>
    <string name="formula1">Formula 1</string>
    <string name="nfl">NFL</string>
    <string name="mlb">MLB</string>
    <string name="nba">NBA</string>
    <string name="mls">MLS</string>
</resources>