<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helloToProject2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="35sp"
        android:layout_marginBottom="600dp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/screenButton"
        android:layout_width="225dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="475dp"
        android:text="@string/changeScreen"
        android:onClick="switchScreens"
        android:backgroundTint="@color/green"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/inputText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="350dp"
        android:hint="@string/inputBox"
        android:inputType="text"
        android:ems="10"
        android:textColor="@color/black"
        />

    <RadioGroup
        android:id="@+id/leaugeButtons"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="250dp"
        >

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioNHL"
            android:text="@string/nhl"
            android:textSize="30sp"
            />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioF1"
            android:text="@string/formula1"
            android:textSize="30sp"
            />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioNFL"
            android:text="@string/nfl"
            android:textSize="30sp"
            />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioMLB"
            android:text="@string/mlb"
            android:textSize="30sp"
            />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioNBA"
            android:text="@string/nba"
            android:textSize="30sp"
            />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioMLS"
            android:text="@string/mls"
            android:textSize="30sp"
            />

    </RadioGroup>

    <TextView
        android:id="@+id/radioCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioCap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:layout_marginBottom="75dp"
        />

    <Button
        android:id="@+id/clearRadio"
        android:layout_width="200dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="585dp"
        android:text="@string/clearRadio"
        android:onClick="clearRadios"
        android:backgroundTint="@color/red"
        android:textColor="@color/black"
        />

</androidx.constraintlayout.widget.ConstraintLayout>